--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 input {
-  width: 100%;
+  width: 500px;
   height: 3em;
   border: none;
   border-radius: 10px;
@@ -8,7 +8,7 @@ input {
 }
 
 textarea {
-  width: 100%;
+  width: 500px;
   height: 9em;
   border: none;
   border-radius: 10px;
@@ -18,41 +18,56 @@ textarea {
 
 /* 상단바 */
 .titleLayout {
-  /*background-color: rgba(242, 175, 175, 0.6);*/
+  background-color: rgb(255, 248, 227);
+  width: 700px;
+  height: 100px;
+  position: fixed;
+  left: 100px;
+  top: 50px;
+  border-radius: 20px 20px 0px 0px;
   text-align: center;
-  color: white;
+  color: burlywood;
 }
 
 /* 메인 */
 .mainLayout {
-  background-color: rgba(35, 18, 57, 0.747);
+  background-color: rgb(243, 215, 202);
   width: 700px;
-  height: 600px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 20px;
+  height: 500px;
+  position: fixed;
+  left: 100px;
+  top: 155px;
+  border-radius: 0px 0px 20px 20px;
 }
 
 .secondLayout {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 45%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: brown;
+}
+
+.listLayout {
+  background-color: white;
+  color: black;
+  width: 500px;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
 }
 
 .addbuttonLayout {
-  position: absolute;
-  left: 70%;
-  top: 90%;
-  transform: translate(-50%, -50%);
+  position: fixed;
+  left: 550px;
+  top: 580px;
 }
 
 .shortButton {
-  width: 60px;
-  height: 30px;
+  width: 80px;
+  height: 40px;
   border: none;
   border-radius: 10px;
   margin-left: 10px;
@@ -60,8 +75,8 @@ textarea {
 }
 
 .longButton {
-  width: 80px;
-  height: 30px;
+  width: 100px;
+  height: 40px;
   border: none;
   border-radius: 10px;
   font-weight: bold;
